# INDIWebManagerApp

./: CMakeLists.txt  INDIWebManagerApp.kcfg  Options.kcfgc  README.md  resources.qrc
debian/: changelog  control
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opsconfiguration.cpp  opsconfiguration.h  opsconfiguration.ui  opsmanager.cpp  opsmanager.h  opsmanager.ui  version.h.cmake
src/indi/: blobmanager.cpp  clientmanager.cpp  customdrivers.cpp  drivermanager.cpp  guimanager.cpp  guimanager.h  indi_debug.cpp  indi_debug.h  indiadaptor.h  indiccd.cpp  indiccd.h  indidbus.cpp  indidevice.cpp  indidome.cpp  indielement.cpp  indilistener.cpp  indiproperty.cpp  indistd.cpp  inditelescope.cpp  inditelescope.h  indiweather.cpp  ksnotification.cpp  servermanager.cpp
